--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
             <button class="generat">Generat</button>
         </div>
     </div>
-    <script src="mainAI.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
