--- a/index.html
+++ b/index.html
@@ -1,51 +1,76 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
-</head>
-<body>
+<html lang="ar">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <title>مولد كلمة مرور</title>
+  </head>
+  <body>
     <div class="container">
-        <h1>Password Generator</h1>
-        <div class="content">
-            <div class="password-area">
-                <div>
-                <div class="password"></div>
-                <button class="copy">copy</button>
-                </div>
-                
-                <!-- <div class="line"></div> -->
-                <div class="password-lenght">
-                    <h2>password length <span></span></h2>
-                    <input  class="length-input" type="range" step="1" max="30">
-                </div>
-                <div class="settings">
-                    <h2>password settings</h2>
-                    <ul class="options">
-                        <li class="option">
-                            <input type="checkbox" name="" id="lowercase">
-                            <label class="lowercase" for="lowercase">lowercase(a-z)</label>
-                        </li>
-                        <li class="option">
-                            <input type="checkbox" name="" id="numbers">
-                            <label  class="numbers" for="numbers">numbers(0-9)</label>
-                        </li>
-                        <li class="option">
-                            <input type="checkbox" name="" id="uppercase">
-                            <label class="uppercase" for="uppercase">uppercase(A-Z)</label>
-                        </li>
-                        <li class="option">
-                            <input type="checkbox" name="" id="symbols">
-                            <label class="symbols" for="symbols">symbols(^$!*)</label>
-                        </li>
-                    </ul>
-                </div>
+      <h1>مولد كلمة مرور</h1>
+      <div class="content">
+        <div class="password-area">
+          <div class="password-box">
+            <input type="text" class="password" readonly />
+            <button class="copy" title="نسخ">
+              <i class="far fa-clipboard"></i>
+            </button>
+          </div>
+          <div class="password-strength">
+            <span>قوة كلمة المرور: </span>
+            <div class="strength-bar">
+              <div class="strength-indicator"></div>
             </div>
-            <button class="generat">Generat</button>
+          </div>
         </div>
+
+        <div class="password-length">
+          <h2>طول كلمة المرور: <span id="length-value">12</span></h2>
+          <input
+            class="length-input"
+            type="range"
+            min="4"
+            max="30"
+            value="12"
+            step="1"
+          />
+        </div>
+
+        <div class="settings">
+          <h2>إعدادات كلمة المرور</h2>
+          <ul class="options">
+            <li class="option">
+              <input type="checkbox" id="lowercase" checked />
+              <label for="lowercase">أحرف صغيرة (a-z)</label>
+            </li>
+            <li class="option">
+              <input type="checkbox" id="uppercase" />
+              <label for="uppercase">أحرف كبيرة (A-Z)</label>
+            </li>
+            <li class="option">
+              <input type="checkbox" id="numbers" />
+              <label for="numbers">أرقام (0-9)</label>
+            </li>
+            <li class="option">
+              <input type="checkbox" id="symbols" />
+              <label for="symbols">رموز (^$!*)</label>
+            </li>
+          </ul>
+        </div>
+        <button class="generate">توليد كلمة مرور</button>
+      </div>
     </div>
     <script src="main.js"></script>
-</body>
+  </body>
 </html>
